# cuda_example

./: .vimrc  CMakeLists.txt
include/: header_with_function.hpp  header_with_kernel.hpp
src/: file_with_function.cpp  file_with_kernel.cu  main.cpp
